Fix: improves visibility and fixes overflowing

--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,9 @@
 .divs-container {
 	display: flex;
 	flex-wrap: wrap;
-	width: 300px;
-	height: 300px;
+	width: 316px;
+	height: 316px;
 	margin-left: auto;
 	margin-right: auto;
+	border: 8px solid grey;
 }
